@@ -1,5 +1,10 @@
 2006-05-24  Sven Neumann  <sven@gimp.org>
 
+	* libgimpwidgets/gimppatheditor.[ch]: renamed a parameter, updated
+	gtk-doc comment.
+
+2006-05-24  Sven Neumann  <sven@gimp.org>
+
 	* libgimpwidgets/gimpfileentry.c: use GTK_STOCK_OPEN instead of
 	"..."  to label the "Browse" button. This makes the widget more
 	similar to the GtkFileChooserButton and addresses bug #342749.
